[project]
name = "euler"
version = "0.1.0"
description = "Project Euler"
authors = [
    {name = "Geo Kim", email = "geokim120209@gmail.com"},
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
]
readme = "README.md"
license = {text = "MIT"}

[tool.uv]
default-groups = ["dev", "lint"]

[dependency-groups]
dev = ["pytest"]
lint = ["ruff"]

[tool.ruff]
line-length = 100

[tool.ruff.lint.isort]
known-first-party = ["euler"]
